src/scss/data/tables.scss
@use "../vars-sass" as v;

table {
  width: 100%;
  border-collapse: collapse;
  border-bottom: solid var(--keyline) var(--bodytext);
  border-top: solid var(--keyline) var(--bodytext);
  margin: calc(var(--gutter) * 2) 0;

  caption {
    font-size: var(--h2-size);
    font-weight: var(--heading-weight);
    text-align: left;
  }

  th,
  td {
    border-top: solid var(--keyline) var(--tint3);
    padding: var(--gutter);
    text-align: left;

    // This technique might not work as well if background colours are used
    &:first-child {
      padding-left: 0;
    }

    &:last-child {
      padding-right: 0;
    }

    // Multiple paragraphs etc. can sit inside a cell
    :last-child {
      margin-bottom: 0;
    }

    // This is a legitimate use of the `abbr` attribute but if the data in
    // question is  not a currency, it might be worth adding a different
    // attribute value to this selector list to achieve the same result.
    // Note that some speech browser might read out the attribute value
    // for example "Price £150".
    &[abbr="Percentage"],
    &[abbr="Price"] {
      text-align: right;
    }
  }
}

@media (width < v.$site-width) {
  // Without the [data-mobile="true"] attribute, just squeeze the padding
  table {
    th,
    td {
      padding: var(--gutter) calc(var(--gutter) / 2);
    }

    &[data-mobile="true"] {
      display: block;

      caption,
      thead,
      tbody,
      tfoot,
      tr,
      th,
      td {
        display: block;
      }

      // Hide the header row
      [data-header="true"] {
        display: none;
      }

      // Using positioning rather than flexbox to account for cells which
      // have multiple paragraphs inside.
      th,
      td {
        position: relative;
        padding: var(--gutter) 0 var(--gutter) 50%;

        &:before {
          content: attr(data-label);
          font-weight: var(--heading-weight);
          left: 0;
          // This shrink-wraps the element and effectively aligns it to the left
          max-width: calc(50% - var(--gutter));
          position: absolute;
          top: var(--gutter);
        }
      }
    }
  }
}

